Fix video thumbnail play button z-index

--- a/wp-content/themes/ednc-roots/assets/app/sass/layouts/_general.scss
+++ b/wp-content/themes/ednc-roots/assets/app/sass/layouts/_general.scss
@@ -232,7 +232,7 @@ section {
   top: 50%;
   transform: translate(-50%, -50%);
   @include at2x('play', 102px, 102px);
-  z-index: 3;
+  z-index: 1;
 
   &.small {
     width: 51px;
