--- a/wp-content/themes/ednc-roots/assets/public/css/main.css
+++ b/wp-content/themes/ednc-roots/assets/public/css/main.css
@@ -8215,7 +8215,7 @@ section {
           transform: translate(-50%, -50%);
   background-image: url(../imgs/play.png);
   background-repeat: no-repeat;
-  z-index: 3;
+  z-index: 1;
 }
 @media (-moz-min-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
   .video-play {
